JEP 472, 475, 479, 483